syntax = "proto3";
package cheqdid.cheqdnode.cheqd;

option go_package = "github.com/cheqd/cheqd-node/x/cheqd/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

message Did {
  string id = 1;
  repeated string controller = 2; //optional
  repeated VerificationMethod verificationMethod = 3; // optional
  repeated google.protobuf.Any authentication = 4; // optional
  repeated google.protobuf.Any assertionMethod = 5; // optional
  repeated google.protobuf.Any capabilityInvocation = 6; // optional
  repeated google.protobuf.Any capabilityDelegation = 7; // optional
  repeated google.protobuf.Any keyAgreement = 8; // optional
  repeated string alsoKnownAs = 9; // optional
  repeated DidService service = 10; // optional
}

message VerificationMethod {
  string id = 1;
  string type = 2;
  string controller = 3;
  map<string,string> publicKeyJwk = 4; // optional
  string publicKeyMultibase = 5; // optional
}

message DidService {
  string id = 1;
  string type = 2;
  string serviceEndpoint = 3;
}


